# backend/src/main/java/ru/maxow/mvpn/xui/ConfigController.java
@@ -3,28 +3,30 @@ package ru.maxow.mvpn.xui;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+import ru.maxow.mvpn.api.ConfigApi;
+import ru.maxow.mvpn.util.exception.NotFoundException;
 
 import java.util.UUID;
 
 @RestController
-@RequestMapping("/v1/config")
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
-public class ConfigController {
+public class ConfigController implements ConfigApi {
 
   ConfigFacade configFacade;
 
-  @GetMapping(value = "/{verificationCode}", produces = MediaType.TEXT_PLAIN_VALUE)
-  public ResponseEntity<String> getConfig(@PathVariable UUID verificationCode) {
-    String config = configFacade.getSubscriptionConfig(verificationCode);
-    return ResponseEntity.ok()
-        .contentType(MediaType.TEXT_PLAIN)
-        .body(config);
+  public String getConfigByVerificationCode(UUID verificationCode) {
+    return configFacade.getSubscriptionConfig(verificationCode);
+  }
+
+  @ExceptionHandler(NotFoundException.class)
+  public ResponseEntity<String> handleNotFoundForConfig(NotFoundException ex) {
+  return ResponseEntity.status(HttpStatus.NOT_FOUND)
+      .contentType(MediaType.TEXT_PLAIN)
+      .body("Config not found");
   }
 }
